# Shellz

./: README.md  pyproject.toml
.github/workflows/: ci.yml
shellz/: main.py
src/: __init__.py  generating_curve.py  helico_spiral.py  main.py  parametric_surface.py  shell.py  test_addon_1.py
